# fsrs-optimizer

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: autofix.yml  publish_pypi.yml  python-publish.yml  test.yml
src/fsrs_optimizer/: __init__.py  __main__.py  fsrs_optimizer.py  fsrs_simulator.py  utils.py
tests/: model_test.py  simulator_test.py
