[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FSRS-Optimizer"
version = "4.27.4"
readme = "README.md"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.22.4",
    "pandas>=1.5.3",
    "pytz>=2022.7.1",
    "scikit_learn>=1.4.0",
    "torch>=1.13.1",
    "tqdm>=4.64.1",
    "statsmodels>=0.13.5",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/open-spaced-repetition/fsrs-optimizer"
