[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FSRS-Optimizer"
version = "6.1.2"
readme = "README.md"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.22.4",
    "pandas>=1.5.3",
    "pytz>=2022.7.1",
    "scikit_learn>=1.4.0",
    "torch>=1.13.1",
    "tqdm>=4.64.1",
    "statsmodels>=0.13.5",
    "scipy<1.14.1"
]
requires-python = ">=3.9,<3.13"

[project.urls]
Homepage = "https://github.com/open-spaced-repetition/fsrs-optimizer"
[tool.ruff.lint]
ignore = ["F405", "F403", "E712", "F541", "E722", "E741"]
[project.optional-dependencies]
test = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
]
