[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FSRS-Optimizer"
version = "6.1.6"
readme = "README.md"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pytz",
    "scikit_learn",
    "torch",
    "tqdm",
    "statsmodels",
    "scipy"
]
requires-python = ">=3.10,<3.14"

[project.urls]
Homepage = "https://github.com/open-spaced-repetition/fsrs-optimizer"
[tool.ruff.lint]
ignore = ["F405", "F403", "E712", "F541", "E722", "E741"]
[project.optional-dependencies]
test = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
]
